--- a/Project 1/index.html
+++ b/Project 1/index.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+
+    </header>
+    <section>
+        <article>
+
+        </article>
+    </section>
+    <footer>
+        <h2>Credits</h2>
+        <p>Created By Roy Loera &copy; 1/17/2023 </p>
+        <ul>
+            <li></li>
+        </ul>
+    </footer>
 </body>
 </html>
