--- a/Project 1/index.html
+++ b/Project 1/index.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Green landyard Construction</title>
 </head>
 <body>
     <header>
-
+        <h1>Green landyard Construction</h1>
+        <p id="tagline">The Green landyard Construction is a comny</p>
     </header>
     <section>
         <article>
