--- a/Project 1/index.html
+++ b/Project 1/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <h1>Green landyard Construction</h1>
-        <p id="tagline">The Green landyard Construction is a comny</p>
+        <p id="tagline">The Green landyard Construction is a</p>
     </header>
     <section>
         <article>
