--- a/Project 1/index.html
+++ b/Project 1/index.html
@@ -9,8 +9,10 @@
 </head>
 <body>
     <header>
-        <h1>Green landyard Construction</h1>
-        <p id="tagline">The Green landyard Construction is a</p>
+        <section>
+            <h1>Green landyard Construction</h1>
+            <p id="tagline">The Green landyard Construction is a</p>
+        </section>
     </header>
     <section>
         <article>
