Moving the h2 tag

--- a/Project 1/index.html
+++ b/Project 1/index.html
@@ -18,8 +18,8 @@
         </section>
     </header>
     <section>
+        <h2 class="centered-main"></h2>
         <article>
-            <h2></h2>
             <p></p>
         </article>
     </section>
