Changing index page

--- a/Project 1/index.html
+++ b/Project 1/index.html
@@ -19,17 +19,19 @@
     </header>
     <section>
         <h2 class="centered-main"></h2>
-        <article>
+        <article class="centered-main">
             <p></p>
         </article>
     </section>
     <footer>
-        <h2>Credits</h2>
-        <p>Created By Roy Loera &copy; 1/17/2023 </p>
-        <ul>
-            <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSedBte5xQyx8vYJD7Dy6H9sYsuzXEu1LmXQ9pTvi2TQ36sGpA/viewform">Form #1</a>.</li>
-            <li><a href="">Form #2</a>.</li>
-        </ul>
+        <section class="centered-main">
+            <h2>Credits</h2>
+            <p>Created By Roy Loera &copy; 1/17/2023 </p>
+            <ul>
+                <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSedBte5xQyx8vYJD7Dy6H9sYsuzXEu1LmXQ9pTvi2TQ36sGpA/viewform">Form #1</a>.</li>
+                <li><a href="">Form #2</a>.</li>
+            </ul>
+        </section>
     </footer>
 </body>
 </html>
