--- a/Project 1/index.html
+++ b/Project 1/index.html
@@ -22,15 +22,17 @@
         <article class="centered-main">
             <p></p>
         </article>
+        <form>
+            <p>Enter an email address:</p>
+            <input id='email'>
+            <button type='submit' id='validate'>Validate!</button>
+        </form>
+        <h2 id='result'></h2>
     </section>
     <footer>
         <section class="centered-main">
             <h2>Credits</h2>
             <p>Created By Roy Loera &copy; 1/17/2023 </p>
-            <ul>
-                <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSedBte5xQyx8vYJD7Dy6H9sYsuzXEu1LmXQ9pTvi2TQ36sGpA/viewform">Form #1</a>.</li>
-                <li><a href="">Form #2</a>.</li>
-            </ul>
         </section>
     </footer>
 </body>
