Changing initial files

--- a/Project 1/index.html
+++ b/Project 1/index.html
@@ -22,7 +22,7 @@
         <article class="centered-main">
             <p></p>
         </article>
-        <form>
+        <form class="centered-main">
             <p>Enter an email address:</p>
             <input id='email'>
             <button type='submit' id='validate'>Validate!</button>
@@ -36,4 +36,5 @@
         </section>
     </footer>
 </body>
+<script src="js/script.js"></script>
 </html>
