Changing index page

--- a/Project 1/index.html
+++ b/Project 1/index.html
@@ -23,9 +23,9 @@
             <p></p>
         </article>
         <form class="centered-main">
-            <p>Enter an email address:</p>
+            <p>Submit an email address:</p>
             <input id='email'>
-            <button type='submit' id='validate'>Validate!</button>
+            <button type='submit' id='validate'>Submit</button>
         </form>
         <h2 id='result'></h2>
     </section>
