--- a/Project 1/info.html
+++ b/Project 1/info.html
@@ -14,5 +14,7 @@
     </form>
     <h2 id='result'></h2>
 </body>
-<script src="js/script.js"></script>
+<script src="js/script.js">
+    alert("Your about leave")
+</script>
 </html>
