Adding Main Content

--- a/Project 1/index.html
+++ b/Project 1/index.html
@@ -18,9 +18,30 @@
         </section>
     </header>
     <section>
-        <h2></h2>
+        <h2>Hard Scaping</h2>
         <article class="centered-main">
-            <p></p>
+            <ul>
+                <li>Pavers</li>
+                <li>Fencing   (Wood and Vinyl)</li>
+                <li>Retaining wall</li>
+                <li>Turff</li>
+                <li>Sod</li>
+                <li>Cover Patios</li>
+                <li>Decks</li>
+                <li>Pergolas</li>
+            </ul>
+            <h2>Handy Man Work</h2>
+            <ul>
+                <li>Home Repairs</li>
+                <li>Renovations</li>
+                <li>Paint</li>
+                <li>Trim Work</li>
+                <li>Door Replacement</li>
+                <li>Flooring</li>
+                <li>Tile</li>
+                <li>Sheet Rock Repair</li>
+                <li>And Much More...</li>
+            </ul>
         </article>
     </section>
     <footer>
