Updating Main Content

--- a/Project 1/index.html
+++ b/Project 1/index.html
@@ -18,8 +18,9 @@
         </section>
     </header>
     <section>
-        <h2>Hard Scaping</h2>
+        <h2>Our Services</h2>
         <article class="centered-main">
+            <h2>Hard Scaping</h2>
             <ul>
                 <li>Pavers</li>
                 <li>Fencing   (Wood and Vinyl)</li>
