Updating Information page

--- a/Project 1/info.html
+++ b/Project 1/info.html
@@ -8,11 +8,13 @@
 </head>
 <body>
     <form>
-        <p>Enter an email address:</p>
-        <input id='email'>
+        <p>First Name:</p>
+        <input id='firstName'>
+        <p>Last Name:</p>
+        <input id='lastName'>
         <button type='submit' id='validate'>Validate!</button>
     </form>
-    <h2 id='result'></h2>
+    <h2 id='results'></h2>
 </body>
 <script src="js/script.js">
     alert("Your about leave")
