changing info page and adding info page

--- a/Project 1/index.html
+++ b/Project 1/index.html
@@ -14,7 +14,9 @@
     <header>
         <section>
             <h1>Green landyard Construction</h1>
-            <p id="tagline">The Green landyard Construction is a</p>
+            <p id="tagline">The Green landyard Construction is a Company. 
+                If your look for a service then <a href="infoa.html">enter your info</a> or 
+                if you want a job then <a href="infoj.html">enter your info</a>.</p>
         </section>
     </header>
     <section>
@@ -49,10 +51,7 @@
     <footer>
         <section class="centered-main">
             <h2>Credits</h2>
-            <p>Created By Roy Loera &copy; 1/17/2023 
-                here is a link to <a href="info.html">Enter your info</a>
-                
-            </p>
+            <p>Created By Roy Loera &copy; 1/17/2023</p>
         </section>
     </footer>
 </body>
