--- a/infoj.html
+++ b/infoj.html
@@ -18,9 +18,9 @@
             <p>Last Name:</p>
             <input id='lastName'>
             <p>Email Address:</p>
-            <input text="Example123@gmail.com" id="emailAddress">
+            <input id="emailAddress">
             <p>Other Information:</p>
-            <input type="text" id="otherInfo">
+            <input id="otherInfo">
             <button type='submit' id='validate'>Validate!</button>
         </form>
         <h2 id='results'></h2>
