--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
     <footer>
         <section class="centered-main">
             <h2>Credits</h2>
-            <p>Created By Roy Loera &copy; 1/17/2023</p>
+            <p>Created By Roy Loera &copy; 1/17/2023
+                you can reach me with my <a href="greenlandyardconstuction@gmail.com">email</a>
+            </p>
         </section>
     </footer>
 </body>
