--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
     <header>
         <section>
             <h1>Green landyard Construction</h1>
-            <p id="tagline">The Green landyard Construction is a Company. 
-                If your look for a service then <a href="infoa.html">enter your info</a> or 
-                if you want a job then <a href="infoj.html">enter your info</a>.</p>
+            <p id="tagline">The Green landyard Construction is a Company.</p>
         </section>
     </header>
     <section>
@@ -52,7 +50,7 @@
         <section class="centered-main">
             <h2>Credits</h2>
             <p>Created By Roy Loera &copy; 1/17/2023
-                you can reach me with my <a href="greenlandyardconstuction@gmail.com">email</a>
+                you can reach me with my <a href="">email</a>
             </p>
         </section>
     </footer>
