--- a/index.html
+++ b/index.html
@@ -45,6 +45,22 @@
             </ul>
             <h2></h2>
         </article>
+        <script src="script.js"></script>
+        <form>
+            <p>Name:</p>
+            <input id="name">
+        </form>
+        <h2 id="results"></h2>
+        <form>
+            <p>Email Address:</p>
+            <input id="emailAddress">
+        </form>
+        <h2 id="results"></h2>
+        <form>
+            <p>Other Informtion:</p>
+            <input id="otherInfo">
+            <button type="submit" id="validate">Submite</button>
+        </form>
     </section>
     <footer>
         <section class="centered-main">
