Fixing form tag

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Ledger&family=Nixie+One&display=swap" rel="stylesheet">
 </head>
 <body>
+    <script src="script.js"></script>
     <header>
         <section>
             <h1>Green landyard Construction</h1>
@@ -43,31 +44,30 @@
                 <li>Sheet Rock Repair</li>
                 <li>And Much More...</li>
             </ul>
-            <h2></h2>
         </article>
-        <script src="script.js"></script>
-        <form>
-            <p>Name:</p>
-            <input id="name">
-        </form>
-        <h2 id="results"></h2>
-        <form>
-            <p>Email Address:</p>
-            <input id="emailAddress">
-        </form>
-        <h2 id="results"></h2>
-        <form>
-            <p>Other Informtion:</p>
-            <input id="otherInfo">
-            <button type="submit" id="validate">Submite</button>
-        </form>
     </section>
     <footer>
         <section class="centered-main">
             <h2>Credits</h2>
             <p>Created By Roy Loera &copy; 1/17/2023
-                you can reach me with my <a href="">email</a>
+                you can reach me with my <a href="mailto:loeraroy279@gmail.com">email</a>
+                as well.
             </p>
+            <form>
+                <p>Name:</p>
+                <input id="name">
+            </form>
+            <h2 id="results"></h2>
+            <form>
+                <p>Email Address:</p>
+                <input id="emailAddress">
+            </form>
+            <h2 id="results"></h2>
+            <form>
+                <p>Other Informtion:</p>
+                <input id="otherInfo">
+                <button type="submit" id="validate">Submite</button>
+            </form>
         </section>
     </footer>
 </body>
