Fixing form tag

--- a/index.html
+++ b/index.html
@@ -53,17 +53,20 @@
                 you can reach me with my <a href="mailto:loeraroy279@gmail.com">email</a>
                 as well.
             </p>
-            <form>
+            <form action="http://example.com/" method="POST">
+                <input type="hidden" name="q" value="a">
                 <p>Name:</p>
                 <input id="name">
             </form>
             <h2 id="results"></h2>
-            <form>
+            <form action="http://example.com/" method="POST">
+                <input type="hidden" name="q" value="a">
                 <p>Email Address:</p>
                 <input id="emailAddress">
             </form>
             <h2 id="results"></h2>
-            <form>
+            <form action="http://example.com/" method="POST">
+                <input type="hidden" name="q" value="a">
                 <p>Other Informtion:</p>
                 <input id="otherInfo">
                 <button type="submit" id="validate">Submite</button>
