--- a/index.html
+++ b/index.html
@@ -22,106 +22,34 @@
         <h2>Our Services</h2>
         <article class="centered-main">
             <h3>Hard Scaping</h3>
+            <figure class="box-right" class="clear-float">
+                <img src="" alt="">
+                <figcaption></figcaption>
+            </figure>
             <ul>
-                <li> Pavers
-                    <figure class="box-right">
-                        <img src="" alt="">
-                        <figcaption></figcaption>
-                    </figure>
-                </li>
-                <li> Fencing   (Wood and Vinyl)
-                    <figure class="box-right">
-                        <img src="" alt="">
-                        <figcaption></figcaption>
-                    </figure>
-                </li>
-                <li> Retaining wall
-                    <figure class="box-right">
-                        <img src="" alt="">
-                        <figcaption></figcaption>
-                    </figure>
-                </li>
-                <li> Turff
-                    <figure class="box-right">
-                        <img src="" alt="">
-                        <figcaption></figcaption>
-                    </figure>
-                </li>
-                <li> Sod
-                    <figure class="box-right">
-                        <img src="" alt="">
-                        <figcaption></figcaption>
-                    </figure>
-                </li>
-                <li> Cover Patios
-                    <figure class="box-right">
-                        <img src="" alt="">
-                        <figcaption></figcaption>
-                    </figure>
-                </li>
-                <li> Decks
-                    <figure class="box-right">
-                        <img src="" alt="">
-                        <figcaption></figcaption>
-                    </figure>
-                </li>
-                <li> Pergolas
-                    <figure class="box-right">
-                        <img src="" alt="">
-                        <figcaption></figcaption>
-                    </figure>
-                </li>
+                <li>Pavers</li>
+                <li>Fencing   (Wood and Vinyl)</li>
+                <li>Retaining wall</li>
+                <li>Turff</li>
+                <li>Sod</li>
+                <li>Cover Patios</li>
+                <li>Decks</li>
+                <li>Pergolas</li>
             </ul>
             <h3>Handy Man Work</h3>
+            <figure class="box-right" class="clear-float">
+                <img src="" alt="">
+                <figcaption></figcaption>
+            </figure>
             <ul>
-                <li> Home Repairs
-                    <figure class="box-right">
-                        <img src="" alt="">
-                        <figcaption></figcaption>
-                    </figure>
-                </li>
-                <li> Renovations
-                    <figure class="box-right">
-                        <img src="" alt="">
-                        <figcaption></figcaption>
-                    </figure>
-                </li>
-                <li> Paint
-                    <figure class="box-right">
-                        <img src="" alt="">
-                        <figcaption></figcaption>
-                    </figure>
-                </li>
-                <li> Trim Work
-                    <figure class="box-right">
-                        <img src="" alt="">
-                        <figcaption></figcaption>
-                    </figure>
-                </li>
-                <li> Door Replacement
-                    <figure class="box-right">
-                        <img src="" alt="">
-                        <figcaption></figcaption>
-                    </figure>
-                </li>
-                <li> Flooring
-                    <figure class="box-right">
-                        <img src="" alt="">
-                        <figcaption></figcaption>
-                    </figure>
-                </li>
-                <li> Tile
-                    <figure class="box-right">
-                        <img src="" alt="">
-                        <figcaption></figcaption>
-                    </figure>
-                </li>
-                <li> Sheet Rock Repair
-                    <figure class="box-right">
-                        <img src="" alt="">
-                        <figcaption></figcaption>
-                    </figure>
-                </li>
+                <li>Home Repairs</li>
+                <li>Renovations</li>
+                <li>Paint</li>
+                <li>Trim Work</li>
+                <li>Door Replacement</li>
+                <li>Flooring</li>
+                <li>Tile</li>
+                <li>Sheet Rock Repair</li>
                 <li>And Much More...</li>
             </ul>
         </article>
