Adding another email/new styles

--- a/index.html
+++ b/index.html
@@ -21,10 +21,6 @@
         <h2>Our Services</h2>
         <article class="centered-main">
             <h3>Hard Scaping</h3>
-            <figure class="box-right" class="clear-float">
-                <img src="" alt="">
-                <figcaption></figcaption>
-            </figure>
             <ul>
                 <li>Pavers</li>
                 <li>Fencing   (Wood and Vinyl)</li>
@@ -36,10 +32,6 @@
                 <li>Pergolas</li>
             </ul>
             <h3>Handy Man Work</h3>
-            <figure class="box-right" class="clear-float">
-                <img src="" alt="">
-                <figcaption></figcaption>
-            </figure>
             <ul>
                 <li>Home Repairs</li>
                 <li>Renovations</li>
@@ -56,10 +48,13 @@
     <footer>
         <section class="centered-main">
             <h2>Credits</h2>
-            <p>Created By Roy Loera &copy; 1/17/2023
-                you can reach me with my <a href="mailto:loeraroy279@gmail.com">email</a>
-                as well.
-            </p>
+            <p>Created By Roy Loera &copy; 1/17/2023</p>
+            <address>
+                you can reach me at <a href="mailto:loeraroy279@gmail.com">loeraroy279@gmail.com</a>
+                as well.<br>
+                also this email is the owner of company <a href="mailto:greenlandyardconstruction@gmail.com">
+                greenlandyardconstruction@gmail</a> as well.<br>
+            </address>
             <form action="http://example.com/" method="POST">
                 <input type="hidden" name="q" value="a">
                 <p>Name:</p>
