Changing file and adding commets

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <section>
             <h1>Green landyard Construction</h1>
-            <p id="tagline">The Green landyard Construction is a Company.</p>
+            <p id="tagline">The Green landyard Construction is a small Company.</p>
         </section>
     </header>
     <section>
@@ -50,12 +50,12 @@
             <h2>Credits</h2>
             <p>Created By Roy Loera &copy; 1/17/2023</p>
             <address>
-                you can reach me at <a href="mailto:loeraroy279@gmail.com">loeraroy279@gmail.com</a>
+                You can reach me at <a href="mailto:loeraroy279@gmail.com">loeraroy279@gmail.com</a>
                 as well.<br>
-                also this email is the owner of company <a href="mailto:greenlandyardconstruction@gmail.com">
+                Also this email is the owner of company <a href="mailto:greenlandyardconstruction@gmail.com">
                 greenlandyardconstruction@gmail</a> as well.<br>
             </address>
-            <form action="http://example.com/" method="POST">
+            <!-- <form action="http://example.com/" method="POST">
                 <input type="hidden" name="q" value="a">
                 <p>Name:</p>
                 <input id="name">
@@ -73,7 +73,7 @@
                 <input id="otherInfo">
                 <button type="submit" id="validate">Submite</button>
             </form>
-            <script src="script.js"></script>
+            <script src="script.js"></script> -->
         </section>
     </footer>
 </body>
