Adding contact us section

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
     <header>
         <section>
-            <h1>Green landyard Construction</h1>
-            <p id="tagline">The Green landyard Construction is a Company.</p>
+            <h1>Greenland Yard Construction</h1>
+            <p id="tagline"><i> Greenland Yard Construction is a small Company.</i></p>
         </section>
     </header>
     <section>
@@ -49,13 +49,23 @@
         <section class="centered-main">
             <h2>Credits</h2>
             <p>Created By Roy Loera &copy; 1/17/2023</p>
+            <ul>
+                <li>Inspiration from <a href=""></a></li>
+            </ul>
+            <h3>Contact Us</h3>
             <address>
-                you can reach me at <a href="mailto:loeraroy279@gmail.com">loeraroy279@gmail.com</a>
-                as well.<br>
-                also this email is the owner of company <a href="mailto:greenlandyardconstruction@gmail.com">
-                greenlandyardconstruction@gmail</a> as well.<br>
+                You can reach the owner of company <a href="mailto:greenlandyardconstruction@gmail.com">
+                greenlandyardconstruction@gmail</a>. 
+                His phone number is 503-847-1205.<br>
+                Also you can reach me at <a href="mailto:loeraroy279@gmail.com">loeraroy279@gmail.com</a> as well.<br>
             </address>
-            <form action="http://example.com/" method="POST">
+            <p>
+                <a href="http://jigsaw.w3.org/css-validator/check/referer">
+                    <img style="border:0;width:88px;height:31px" src="http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!" />
+                </a>
+            </p>
+            <p>Need a <a href="">Service</a>? Or do need a <a href="">Job</a>?</p>
+            <!-- <form action="http://example.com/" method="POST">
                 <input type="hidden" name="q" value="a">
                 <p>Name:</p>
                 <input id="name">
@@ -72,7 +82,7 @@
                 <p>Other Informtion:</p>
                 <input id="otherInfo">
                 <button type="submit" id="validate">Submite</button>
-            </form>
+            </form> -->
             <script src="script.js"></script>
         </section>
     </footer>
