Adding a new section

--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
         </section>
     </header>
     <section>
-        <h2>Our Services</h2>
+        <h2>Informtion</h2>
         <article class="centered-main">
+            <p>Hello my name is Bulmaro and I owner of this company. Also I'm looking for new workers and new clinets and if you are look for a Job then click link at the bottom of the page.</p>
+            <h2>Our Services</h2>
             <h3>Hard Scaping</h3>
             <ul>
                 <li>Pavers</li>
