Source of inspriation

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <h2>Credits</h2>
             <p>Created By Roy Loera &copy; 1/17/2023</p>
             <ul>
-                <li>Inspiration from <a href=""></a></li>
+                <li>Inspiration from <a href="https://deavita.net/garden-ideas-landscape-design.html">Deavita</a></li>
             </ul>
             <h3>Contact Us</h3>
             <address>
