--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </section>
     </header>
     <section>
-        <h2>Informtion</h2>
+        <h2>Information</h2>
         <article class="centered-main">
             <p>Hello my name is Bulmaro and I owner of this company. Also I'm looking for new workers and new clinets and if you are look for a Job then click link at the bottom of the page.</p>
             <h2>Our Services</h2>
@@ -66,7 +66,7 @@
                     <img style="border:0;width:88px;height:31px" src="http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!" />
                 </a>
             </p>
-            <p>Need a <a href="">Service</a>? Or do need a <a href="">Job</a>?</p>
+            <p>Need a <a href="">Service</a>? Or do need a <a href="https://docs.google.com/forms/d/e/1FAIpQLSeLsBPYqOHxeakfCTSstHRYwvfcZEPgaufUeZhXTyC8TymEzQ/viewform">Job</a>?</p>
             <!-- <form action="http://example.com/" method="POST">
                 <input type="hidden" name="q" value="a">
                 <p>Name:</p>
