--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <section>
         <h2>Information</h2>
         <article class="centered-main">
-            <p>Hello my name is Bulmaro and I owner of this company. Also I'm looking for new workers and new clinets and if you are look for a Job then click link at the bottom of the page.</p>
+            <p>Hello my name is Bulmaro and owner of the company. I'm looking for new team members and always welcome new clinets. If you are look for a Job. You can click link at the bottom of the page.</p>
             <h2>Our Services</h2>
             <h3>Hard Scaping</h3>
             <ul>
