adding new lines of code

--- a/index.html
+++ b/index.html
@@ -11,13 +11,74 @@
     <link href="https://fonts.googleapis.com/css2?family=Ledger&family=Nixie+One&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <section>
-            <h1>Greenland Yard Construction</h1>
-            <p id="tagline"><i> Greenland Yard Construction is a small Company.</i></p>
-        </section>
-    </header>
-    <section>
+    <script>
+        (function(){if(typeof NPSH!=="undefined"&&NPSH.isScrolled()){setTimeout(()=>{document.body.classList.remove("nitro-cover")},le3);document.body.classList.add("nitro-cover");window.addEventListener("load",function(){document.body.classList.remove("nitro-cover")})}})
+    </script>
+    <div id="page-container">
+        <div id="top-header">
+            <div class="container clearfix"::after>
+                <div id="et-info">
+                    <a href="tel:503-847-1205">
+                        <span id="et-info-phone"::before>
+                            "503-847-1205"
+                        </span>
+                    </a>
+                    <ul class="et-social-icons">
+                        <li class="et-social-icons et-social-facebook">
+                            <a href="https://www.facebook.com/" class="icon">
+                                <span>facebook</span>
+                            </a>
+                        </li>
+                        <li class="et-social-icons et-social-twitter">
+                            <a href="https://www.twitter.com/" class="icon">
+                                <span>twitter</span>
+                            </a>
+                        </li>
+                        <li class="et-social-icons et-social-instagram">
+                            <a href="https://www.instagram.com/" class="icon">
+                                <span>instagram</span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div id="et-secondary-menu">
+                    <div class="et_duplicate_social_icons">
+                        <ul class="et-social-icons">
+                            <li class="et-social-icons et-social-facebook">
+                                <a href="https://www.facebook.com/" class="icon"::before>
+                                    <span>facebook</span>
+                                </a>
+                            </li>
+                            <li class="et-social-icons et-social-twitter">
+                                <a href="https://www.twitter.com/" class="icon"::before>
+                                    <span>twitter</span>
+                                </a>
+                            </li>
+                            <li class="et-social-icons et-social-instagram">
+                                <a href="https://www.instagram.com/" class="icon"::before>
+                                    <span>instagram</span>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <header id="main-header" data-height-onload="50" class="" data-height-loaded="true" data-fixed-height-onload="0">
+            <div class="container clearfix et_menu_container">
+                <div class="logo_container">
+                    <span class="logo_helper"></span>
+                    <img src="" alt="Greenland Yard Construction">
+                </div>
+            </div>
+            <section>
+                <h1>Greenland Yard Construction</h1>
+                <p id="tagline"><i> Greenland Yard Construction is a small Company.</i></p>
+            </section>
+        </header>
+    </div>
+    
+    <!--  <section>
         <h2>Information</h2>
         <article class="centered-main">
             <p>Hello my name is Bulmaro and owner of the company. I'm looking for new team members and always welcome new clinets. If you are look for a Job. You can click link at the bottom of the page.</p>
@@ -67,7 +128,7 @@
                 </a>
             </p>
             <p>Need a <a href="">Service</a>? Or do need a <a href="https://docs.google.com/forms/d/e/1FAIpQLSeLsBPYqOHxeakfCTSstHRYwvfcZEPgaufUeZhXTyC8TymEzQ/viewform">Job</a>?</p>
-            <!-- <form action="http://example.com/" method="POST">
+                <form action="http://example.com/" method="POST">
                 <input type="hidden" name="q" value="a">
                 <p>Name:</p>
                 <input id="name">
@@ -84,8 +145,8 @@
                 <p>Other Informtion:</p>
                 <input id="otherInfo">
                 <button type="submit" id="validate">Submite</button>
-            </form> -->
+            </form> 
         </section>
-    </footer>
-</body>
+    </footer> -->
+</body> 
 </html>
