adding old lines of code

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <div class="container clearfix et_menu_container">
                 <div class="logo_container">
                     <span class="logo_helper"></span>
-                    <img src="" alt="Greenland Yard Construction">
+                    <!-- <img src="" alt="Greenland Yard Construction"> -->
                 </div>
             </div>
             <section>
@@ -77,8 +77,7 @@
             </section>
         </header>
     </div>
-    
-    <!--  <section>
+    <section>
         <h2>Information</h2>
         <article class="centered-main">
             <p>Hello my name is Bulmaro and owner of the company. I'm looking for new team members and always welcome new clinets. If you are look for a Job. You can click link at the bottom of the page.</p>
@@ -128,7 +127,7 @@
                 </a>
             </p>
             <p>Need a <a href="">Service</a>? Or do need a <a href="https://docs.google.com/forms/d/e/1FAIpQLSeLsBPYqOHxeakfCTSstHRYwvfcZEPgaufUeZhXTyC8TymEzQ/viewform">Job</a>?</p>
-                <form action="http://example.com/" method="POST">
+            <!-- <form action="http://example.com/" method="POST">
                 <input type="hidden" name="q" value="a">
                 <p>Name:</p>
                 <input id="name">
@@ -145,8 +144,8 @@
                 <p>Other Informtion:</p>
                 <input id="otherInfo">
                 <button type="submit" id="validate">Submite</button>
-            </form> 
+            </form> --> 
         </section>
-    </footer> -->
+    </footer> 
 </body> 
 </html>
