--- a/payments.html
+++ b/payments.html
@@ -4,11 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Green landyard Construction</title>
+    <title>Payments</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Ledger&family=Nixie+One&display=swap" rel="stylesheet">
 </head>
 <body>
     <script>
@@ -79,7 +76,6 @@
                             <li id="menu-item-9781" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-9781">
                                 <a href="payments.html" cursorshover="true">Payments</a>
                             </li>
-                            
                         </ul>
                     </nav>
                 </div>
@@ -90,75 +86,5 @@
             </section>
         </header>
     </div>
-    <section>
-        <h2>Information</h2>
-        <article class="centered-main">
-            <p>Hello my name is Bulmaro and owner of the company. I'm looking for new team members and always welcome new clinets. If you are look for a Job. You can click link at the bottom of the page.</p>
-            <h2>Our Services</h2>
-            <h3>Hard Scaping</h3>
-            <ul>
-                <li>Pavers</li>
-                <li>Fencing   (Wood and Vinyl)</li>
-                <li>Retaining wall</li>
-                <li>Turff</li>
-                <li>Sod</li>
-                <li>Cover Patios</li>
-                <li>Decks</li>
-                <li>Pergolas</li>
-            </ul>
-            <h3>Handy Man Work</h3>
-            <ul>
-                <li>Home Repairs</li>
-                <li>Renovations</li>
-                <li>Paint</li>
-                <li>Trim Work</li>
-                <li>Door Replacement</li>
-                <li>Flooring</li>
-                <li>Tile</li>
-                <li>Sheet Rock Repair</li>
-                <li>And Much More...</li>
-            </ul>
-        </article>
-    </section>
-    <footer>
-        <section class="centered-main">
-            <h2>Credits</h2>
-            <p>Created By Roy Loera &copy; 1/17/2023</p>
-            <ul>
-                <li>Inspiration from <a href="https://deavita.net/garden-ideas-landscape-design.html">Deavita</a></li>
-            </ul>
-            <h3>Contact Us</h3>
-            <address>
-                You can reach the owner of company <a href="mailto:greenlandyardconstruction@gmail.com">
-                greenlandyardconstruction@gmail</a>. 
-                His phone number is 503-847-1205.<br>
-                Also you can reach me at <a href="mailto:loeraroy279@gmail.com">loeraroy279@gmail.com</a> as well.<br>
-            </address>
-            <p>
-                <a href="http://jigsaw.w3.org/css-validator/check/referer">
-                    <img style="border:0;width:88px;height:31px" src="http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!" />
-                </a>
-            </p>
-            <p>Need a <a href="">Service</a>? Or do need a <a href="https://docs.google.com/forms/d/e/1FAIpQLSeLsBPYqOHxeakfCTSstHRYwvfcZEPgaufUeZhXTyC8TymEzQ/viewform">Job</a>?</p>
-            <!-- <form action="http://example.com/" method="POST">
-                <input type="hidden" name="q" value="a">
-                <p>Name:</p>
-                <input id="name">
-            </form>
-            <h2 id="results"></h2>
-            <form action="http://example.com/" method="POST">
-                <input type="hidden" name="q" value="a">
-                <p>Email Address:</p>
-                <input id="emailAddress">
-            </form>
-            <h2 id="results"></h2>
-            <form action="http://example.com/" method="POST">
-                <input type="hidden" name="q" value="a">
-                <p>Other Informtion:</p>
-                <input id="otherInfo">
-                <button type="submit" id="validate">Submite</button>
-            </form> --> 
-        </section>
-    </footer> 
-</body> 
+</body>
 </html>
