--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             </div>
         </div>
         <header id="main-header" data-height-onload="50" class="" data-height-loaded="true" data-fixed-height-onload="0">
-            <div class="container clearfix et_menu_container">
+            <div class="container clearfix et_menu_container"::after>
                 <div class="logo_container">
                     <span class="logo_helper"></span>
                     <!-- <img src="" alt="Greenland Yard Construction"> -->
@@ -77,49 +77,141 @@
                                 <a href="https://www.Greenlandyc.com/" cursorshover="true">Home</a>
                             </li>
                             <li id="menu-item-9781" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-9781">
-                                <a href="payments.html" cursorshover="true">Payments</a>
+                                <a href="https://www.Greenlandyc.com/payments.html" cursorshover="true">Payments</a>
                             </li>
-                            
+                            <li id="menu-item-173" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-173">
+                                <a href="">Contact</a>
+                            </li>
                         </ul>
                     </nav>
+                    <div id="et_mobile_nav_menu">
+                        <div class="mobile_nav closed">
+                            <span class="select_page">Select Page</span>
+                            <span class="mobile_menu_bar mobile_menu_bar_toggle"::before></span>
+                            <ul id="mobile_menu" class="et_mobile_menu">
+                                <li id="menu-item-133" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item menu-item-home menu-item-133 et_first_mobile_item">
+                                    <a href="https://www.Greenlandyc.com/">Home</a>
+                                </li>
+                                <li id="menu-item-9781" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-9781">
+                                    <a href="https://www.Greenlandyc.com/payments.html" cursorshover="true">Payments</a>
+                                </li>
+                                <li id="menu-item-173" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-173">
+                                    <a href="">Contact</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <section>
-                <h1>Greenland Yard Construction</h1>
-                <p id="tagline"><i> Greenland Yard Construction is a small Company.</i></p>
-            </section>
+            <div class="et_search_outer">
+                <div class="container et_search_form_container">
+                    <form role="search" method="get" class="et-search-form" action="https://www.Greenlandyc.com/">
+                        <input type="search" class="et-search-field" placeholder="Search ..." value name="s" title="Search for:">
+                    </form>
+                    <span class="et_close_search_field"::after></span>
+                </div>
+            </div>
         </header>
+        <div id="et-main-area">
+            <div class="et_pb_section header-video et_section_regular">
+                <div class="et_pb_row et-last-child"::after>
+                    <div class="et_pb_column et_pb_column_4_4 et_pb_css_mix_blend_mode_passthrough et-last-child">
+                        <div class="et_pb_module et_pb_image et_pb_image_sticky et_always_center_on_mobile">
+                            <span class="et_pb_image_wrap image-wrap">
+                                <img src="" alt="image not decided">
+                            </span>
+                            <span class="et_pb_image_wrap video-wrap">
+                                <video autoplay playsinline muted src="" preload="auto" data-video="0">
+                                    <source type="video/mp4" src="">
+                                </video>
+                            </span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="main-content">
+            <header>
+                <section>
+                    <h1>Greenland Yard Construction</h1>
+                    <p id="tagline"><i> Greenland Yard Construction is a small Company.</i></p>
+                </section>
+            </header>
+            <section>
+                <h2>Information</h2>
+                <article class="centered-main">
+                    <p>Hello my name is Bulmaro and owner of the company. I'm looking for new team members and always welcome new clinets. If you are look for a Job. You can click links at the bottom of the page.</p>
+                    <h2>Our Services</h2>
+                    <h3>Hard Scaping</h3>
+                    <ul>
+                        <li>Pavers</li>
+                        <li>Fencing   (Wood and Vinyl)</li>
+                        <li>Retaining wall</li>
+                        <li>Turff</li>
+                        <li>Sod</li>
+                        <li>Cover Patios</li>
+                        <li>Decks</li>
+                        <li>Pergolas</li>
+                    </ul>
+                    <h3>Handy Man Work</h3>
+                    <ul>
+                        <li>Home Repairs</li>
+                        <li>Renovations</li>
+                        <li>Paint</li>
+                        <li>Trim Work</li>
+                        <li>Door Replacement</li>
+                        <li>Flooring</li>
+                        <li>Tile</li>
+                        <li>Sheet Rock Repair</li>
+                        <li>And Much More...</li>
+                    </ul>
+                </article>
+            </section>
+            <script nitro-exclude>
+                document.cookie = 'nitroCachedPage=' + (!window.NITROPACK_STATE ? '0' : '1') + '; path=/; SameSite=Lax';
+            </script>
+            <script nitro-exclude>
+                if (!window.NITROPACK_STATE || window.NITROPACK_STATE != 'FRESH') {
+                    var proxyPurgeOnly = 0;
+                    if (typeof navigator.sendBeacon !== 'undefined') {
+                        var nitroData = new FormData(); nitroData.append('nitroBeaconUrl', 'aHR0cHM6Ly93d3cubGV3aXNsYW5kc2NhcGUuY29tLw=='); nitroData.append('nitroBeaconCookies', 'W10='); nitroData.append('nitroBeaconHash', 'f5d97ef383f3469e5b40d2231fc3ba7d96b5f4e90d05168788ccd09d2f7feaec15abd7e38e9309accfaldbe134e29807316fd83512a84345183078c701ab92f'); nitroData.append('proxyPurgeOnly', ''); nitroData.append('layout', 'home'); navigator.sendBeacon(location.href, nitroData);
+                    } else {
+                        var xhr = new XMLHttpRequest(); xhr.open('POST', location.href, true); xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded'); xhr.send('nitroBeaconUrl=aHR0cHM6Ly93d3cubGV3aXNsYW5kc2NhcGUuY29tLw==&nitroBeaconCookies=W10=&nitroBeaconHash=f5d97ef383f3469e5b40d2231fc3ba7d96b5f4e90d05168788ccd09d2f7feaec15abd7e38e9309accfaldbe134e29807316fd83512a84345183078c701ab92f&proxyPurgeOnly=&layout=home');
+                    }
+                }
+            </script>
+            <footer id="main-footer" class="nitro-offscreen">
+                <div class="container">
+                    <div id="footer-widgets" class="clearfix"::after>
+                        <div class="footer-widget">
+                            <div id="text-2" class="fwidget et_pb_widget widget_text">
+                                <div class="textwidget">
+                                    <div>
+                                        <a href="https://www.Greenlandyc.com/">Home</a>
+                                        "&nbsp;|&nbsp;"
+                                        <a href="">Photo Gallery</a>
+                                        "&nbsp;|&nbsp;"
+                                        <a href="">Contact</a>
+                                        "&nbsp;|&nbsp;"
+                                        <a href="https://www.Greenlandyc.com/payments.html">Make a Payment</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div id="footer-bottom">
+                    <div class="container clearfix"::after>
+                        <ul class="et-social-icons">
+                            <li class="et-social-icon et-social-facebook">
+                                <a href=""></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </footer>
+        </div>
     </div>
-    <section>
-        <h2>Information</h2>
-        <article class="centered-main">
-            <p>Hello my name is Bulmaro and owner of the company. I'm looking for new team members and always welcome new clinets. If you are look for a Job. You can click link at the bottom of the page.</p>
-            <h2>Our Services</h2>
-            <h3>Hard Scaping</h3>
-            <ul>
-                <li>Pavers</li>
-                <li>Fencing   (Wood and Vinyl)</li>
-                <li>Retaining wall</li>
-                <li>Turff</li>
-                <li>Sod</li>
-                <li>Cover Patios</li>
-                <li>Decks</li>
-                <li>Pergolas</li>
-            </ul>
-            <h3>Handy Man Work</h3>
-            <ul>
-                <li>Home Repairs</li>
-                <li>Renovations</li>
-                <li>Paint</li>
-                <li>Trim Work</li>
-                <li>Door Replacement</li>
-                <li>Flooring</li>
-                <li>Tile</li>
-                <li>Sheet Rock Repair</li>
-                <li>And Much More...</li>
-            </ul>
-        </article>
-    </section>
     <footer>
         <section class="centered-main">
             <h2>Credits</h2>
